# Big_data_factory

./: .gitignore  README.md  pyproject.toml
base-images/: README.md
docs/: api-contract.md  architecture.md
eco-store/: README.md
manifests/: README.md
specs/clusters/: hadoop-3node.yaml
src/big_data_factory/: __init__.py  actions.py  cli.py  config.py  models.py  planner.py  state.py  utils.py
src/big_data_factory/builders/: __init__.py  vmware.py
state/: schema.sql
templates/services/hadoop/: hdfs-site.xml.j2
tests/: README.md
